# grygry

./: LICENSE  README.md  pyproject.toml  tox.ini
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: main.yml
grygry/: grycli.py
grygry/lib/: grylib.py  parameters.json
src/grygry/lib/: grylib.py  parameters.json
tests/: test_cli.py
tests/data/subdir/: grylib_copie.py
