[tool.poetry]
name = "grygry"
version = "2.5.0"
description = "Command line utility to grep different types of source code."
license = "MIT"
authors = ["Jerome Dumonteil <jerome.dumonteil@gmail.com>"]
keywords = ["code", "source", "grep"]
homepage = "https://github.com/jdum/grygry"
repository = "https://github.com/jdum/grygry"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Text Processing",
    "Topic :: Software Development"
]
packages = [
    {include = "grygry"}
]

[tool.poetry.scripts]
gryall = "grygry.grycli:gryall"
grycfg = "grygry.grycli:grycfg"
grycss = "grygry.grycli:grycss"
gryhtml = "grygry.grycli:gryhtml"
gryhtmlall = "grygry.grycli:gryhtmlall"
gryjs = "grygry.grycli:gryjs"
gryjson = "grygry.grycli:gryjson"
grymd = "grygry.grycli:grymd"
grynopy = "grygry.grycli:grynopy"
grypy = "grygry.grycli:grypy"
grypy0 = "grygry.grycli:grypy0"
grypy2 = "grygry.grycli:grypy2"
gryrb = "grygry.grycli:gryrb"
grysh = "grygry.grycli:grysh"
grytoml = "grygry.grycli:grytoml"
grytxt = "grygry.grycli:grytxt"
gryyml = "grygry.grycli:gryyml"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
poetry = ">=1.6"
pytest = ">=7.0"
pytest-cov = ">=4.0.0"
tox = "^4"
ruff = ">=0.1"
black = ">=22.0"
isort = ">=5.12.0"
coverage = ">=7.0"
deptry = ">=0.6.4"
mypy = ">=0.981"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.mypy]
files = ["grygry"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.ruff]
target-version = "py312"
line-length = 88
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Use specific rule codes when ignoring type issues
    "PGH003",
    # check for execution of untrusted input
    "S603",
    # Class attribute `open` is shadowing a Python builtin
    "A003",
    # Use `X | Y` in `isinstance` call instead of `(X, Y)`
    "UP038",
    # Avoid specifying long messages outside the exception class
    "TRY003",
    # Use ternary operator
    "SIM108",
    # Use of `assert` detected
    "S101",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["grygry"]
