[project]
name = "grygry"
version = "2.10.0"
description = "Command line utility to grep different types of source code"
license = "MIT"
readme = "README.md"
authors = [{ name = "Jérôme Dumonteil", email = "jerome.dumonteil@gmail.com" }]
keywords = ["code", "source", "grep"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Text Processing",
    "Topic :: Software Development",
]
requires-python = ">=3.10, <4"
dependencies = []

[project.urls]
Homepage = "https://github.com/jdum/grygry"
Repository = "https://github.com/jdum/grygry"

[project.scripts]
grygry_functions = "grygry.grycli:grygry_functions"
gryall = "grygry.grycli:gryall"
gryall0 = "grygry.grycli:gryall"
gryall00 = "grygry.grycli:gryall00"
grypy = "grygry.grycli:grypy"
grypy0 = "grygry.grycli:grypy0"
grypy2 = "grygry.grycli:grypy2"
grypy00 = "grygry.grycli:grypy00"
grypyt = "grygry.grycli:grypyt"
grypyt00 = "grygry.grycli:grypyt00"
grynopy = "grygry.grycli:grynopy"
grynopy00 = "grygry.grycli:grynopy00"
grymd = "grygry.grycli:grymd"
grymd0 = "grygry.grycli:grymd0"
grymd00 = "grygry.grycli:grymd00"
grytxt = "grygry.grycli:grytxt"
grytxt0 = "grygry.grycli:grytxt0"
grytxt00 = "grygry.grycli:grytxt00"
grycfg = "grygry.grycli:grycfg"
grycfg00 = "grygry.grycli:grycfg00"
gryrb = "grygry.grycli:gryrb"
gryrb0 = "grygry.grycli:gryrb0"
gryrb00 = "grygry.grycli:gryrb00"
gryjs = "grygry.grycli:gryjs"
gryjs00 = "grygry.grycli:gryjs00"
grycss = "grygry.grycli:grycss"
grycss00 = "grygry.grycli:grycss00"
gryjson = "grygry.grycli:gryjson"
gryjson00 = "grygry.grycli:gryjson00"
grytoml = "grygry.grycli:grytoml"
grytoml00 = "grygry.grycli:grytoml00"
gryhtml = "grygry.grycli:gryhtml"
gryhtml00 = "grygry.grycli:gryhtml00"
gryhtmlall = "grygry.grycli:gryhtmlall"
gryhtmlall0 = "grygry.grycli:gryhtmlall0"
gryhtmlall00 = "grygry.grycli:gryhtmlall00"
gryyml = "grygry.grycli:gryyml"
gryyml00 = "grygry.grycli:gryyml00"
grysh = "grygry.grycli:grysh"
grysh0 = "grygry.grycli:grysh0"
grysh00 = "grygry.grycli:grysh00"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "coverage>=7.13.0",
    "mypy>=1.19.0",
    "mypy-extensions>=1.1.0",
    "typing-extensions>=4.15.0",
    "tox>=4.32.0",
    "tox-gh-actions>=3.3.0",
    "ruff>=0.14.9",
    "isort>=7.0.0",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py314"
exclude = [".venv"]
line-length = 88
indent-width = 4
fix = true
[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Use specific rule codes when ignoring type issues
    "PGH003",
    # check for execution of untrusted input
    "S603",
    # Class attribute `open` is shadowing a Python builtin
    "A003",
    # Avoid specifying long messages outside the exception class
    "TRY003",
    # Use ternary operator
    "SIM108",
    # Use of `assert` detected
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "RUF005"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["grygry"]

[tool.mypy]
files = ["src/grygry"]
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
